Explications page d'accueil

--- a/forum.entreprise/module.front/src/main/webapp/css/style.css
+++ b/forum.entreprise/module.front/src/main/webapp/css/style.css
@@ -142,7 +142,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .logo h1 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Oswald', sans-serif;
     color: #fff;
     font-size: 60px;
 }
