--- a/forum.entreprise/module.front/src/main/webapp/css/style.css
+++ b/forum.entreprise/module.front/src/main/webapp/css/style.css
@@ -297,7 +297,9 @@ fieldset[disabled] .btn-primary.active {
     color: #777;
 }
 
-
+th {
+    color: white;
+}
 
 /**** Start Background Color ****/
 
