--- a/forum.entreprise/module.front/src/main/webapp/css/style.css
+++ b/forum.entreprise/module.front/src/main/webapp/css/style.css
@@ -303,6 +303,22 @@ th {
 .table td {
     vertical-align: middle;
 }
+
+/**RESPONSIVE **/
+
+.well {
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 0px;
+}
+@media (min-width: 768px){
+    .well {
+        border-radius: 4px;
+        margin-top: 20px;
+    }
+}
+
+
 /**** Start Background Color ****/
 
 .blue {
